3.5.0
  - New API
    - SqlStatements.allowUnusedBindings allows you to bind Arguments to query parts that may be left out of the final query (e.g. by a TemplateEngine that renders conditional blocks) without getting an Exception.
  - Improvements
    - Skip unused string formatting for performance
    - Spring FactoryBean better singleton support
    - KotlinMapper respects constructor annotations, lateinit improvements
    - behavioral fixes in Argument binding where the number of provided Arguments differs from the expected number.

3.4.0
  - New API
    - StatementException.getShortMessage
    - SqlStatements.setQueryTimeout(int) to configure the JDBC Statement queryTimeout.
  - Bug Fixes
    - Bridge methods cause SqlObject exceptions to get wrapped in `InvocationTargetException`
    - Ignore static methods on SqlObject types
  - Improvements
    - Handle `null` values in defined attributes

3.3.0
  - New API
    - SerializableTransactionRunner.setOnFailure(), setOnSuccess() methods allow callbacks to be
      registered to observe transaction success and failure.
    - JdbiRule.migrateWithFlyway() chaining method to run Flyway migrations on the test database
      prior to running tests.
    - @UseStringSubstitutorTemplateEngine SQL object annotation.
    - @Beta annotation to identify non-final APIs.
      - Application developers are invited to try out beta APIs and provide feedback to help us
        identify weaknesses and make improvements before new APIs are made final.
      - Library maintainers are discouraged from using beta APIs, as this might lead to
        ClassNotFoundExceptions or NoSuchMethodExceptions at runtime whenever beta APIs change.
  - Improvements
    - Added some extra javadoc to SqlLogger
    - @UseTemplateEngine now works with MessageFormatTemplateEngine and
      StringSubstitutorTemplateEngine
  - Bug fixes
    - SqlStatement.bindMethods() (and @BindMethods) now selects the correct method when the method