@@ -16,11 +16,17 @@ package org.jdbi.v3.core.mapper;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-
+import java.util.Set;
+import java.util.function.UnaryOperator;
+import org.jdbi.v3.core.config.JdbiConfig;
 import org.jdbi.v3.core.statement.StatementContext;
+import org.jdbi.v3.meta.Beta;
 
 /**
  * Yo dawg, I heard you like maps, so I made you a mapper that maps rows into {@code Map<String,Object>}. Map
@@ -28,7 +34,11 @@ import org.jdbi.v3.core.statement.StatementContext;
  * default.
  */
 public class MapMapper implements RowMapper<Map<String, Object>> {
-    private final boolean foldCase;
+    /**
+     * @deprecated TODO remove in jdbi4
+     */
+    @Deprecated
+    private final boolean toLowerCase;
 
     /**
      * Constructs a new MapMapper, with map keys converted to lowercase.
@@ -39,10 +49,13 @@ public class MapMapper implements RowMapper<Map<String, Object>> {
 
     /**
      * Constructs a new MapMapper
-     * @param foldCase if true, column names are converted to lowercase in the mapped {@link Map}.
+     * @param toLowerCase if true, column names are converted to lowercase in the mapped {@link Map}.
+     *
+     * @deprecated use the {@link Config} class instead
      */
-    public MapMapper(boolean foldCase) {
-        this.foldCase = foldCase;
+    @Deprecated
+    public MapMapper(boolean toLowerCase) {
+        this.toLowerCase = toLowerCase;
     }
 
     @Override
@@ -52,32 +65,106 @@ public class MapMapper implements RowMapper<Map<String, Object>> {
 
     @Override
     public RowMapper<Map<String, Object>> specialize(ResultSet rs, StatementContext ctx) throws SQLException {
-        ResultSetMetaData m = rs.getMetaData();
-        int columnCount = m.getColumnCount();
-        String[] columnNames = new String[columnCount + 1];
-
-        for (int i = 1; i <= columnCount; i++) {
-            String key = m.getColumnName(i);
-            String alias = m.getColumnLabel(i);
-
-            if (alias == null) {
-                alias = key;
-            }
-            if (foldCase) {
-                alias = alias.toLowerCase(Locale.ROOT);
-            }
-
-            columnNames[i] = alias;
-        }
+        Config config = ctx.getConfig(Config.class);
+        List<String> columnNames = getColumnNames(rs, !config.getForceNewApi() && toLowerCase ? Config.CaseChange.LOWER : config.getCaseChange());
 
         return (r, c) -> {
-            Map<String, Object> row = new LinkedHashMap<>(columnCount);
+            Map<String, Object> row = new LinkedHashMap<>(columnNames.size());
 
-            for (int i = 1; i <= columnCount; i++) {
-                row.put(columnNames[i], rs.getObject(i));
+            for (int i = 0; i < columnNames.size(); i++) {
+                row.put(columnNames.get(i), rs.getObject(i + 1));
             }
 
             return row;
         };
+    }
+
+    private static List<String> getColumnNames(ResultSet rs, Config.CaseChange caseChange) throws SQLException {
+        // important: ordered and unique
+        Set<String> columnNames = new LinkedHashSet<>();
+        ResultSetMetaData meta = rs.getMetaData();
+        int columnCount = meta.getColumnCount();
+
+        for (int i = 0; i < columnCount; i++) {
+            String columnName = meta.getColumnName(i + 1);
+            String alias = meta.getColumnLabel(i + 1);
+
+            String name = caseChange.apply(alias == null ? columnName : alias);
+
+            boolean added = columnNames.add(name);
+            if (!added) {
+                throw new RuntimeException("column " + name + " appeared twice in this resultset!");
+            }
+        }
+
+        return new ArrayList<>(columnNames);
+    }
+
+    @Beta
+    public static class Config implements JdbiConfig<Config> {
+        private CaseChange caseChange;
+        private boolean forceNewApi;
+
+        public Config() {
+            caseChange = CaseChange.NOP;
+            forceNewApi = false;
+        }
+
+        private Config(Config that) {
+            caseChange = that.caseChange;
+            forceNewApi = that.forceNewApi;
+        }
+
+        @Beta
+        public CaseChange getCaseChange() {
+            return caseChange;
+        }
+
+        @Beta
+        public Config setCaseChange(CaseChange caseChange) {
+            this.caseChange = caseChange;
+            return this;
+        }
+
+        /**
+         * @deprecated will be removed along with the old API
+         */
+        @Beta
+        @Deprecated
+        public boolean getForceNewApi() {
+            return forceNewApi;
+        }
+
+        /**
+         * @deprecated will be removed along with the old API
+         */
+        @Beta
+        @Deprecated
+        public Config setForceNewApi(boolean forceNewApi) {
+            this.forceNewApi = forceNewApi;
+            return this;
+        }
+
+        @Override
+        public Config createCopy() {
+            return new Config(this);
+        }
+
+        @Beta
+        public enum CaseChange {
+            NOP(UnaryOperator.identity()),
+            LOWER(s -> s.toLowerCase(Locale.ROOT)),
+            UPPER(s -> s.toUpperCase(Locale.ROOT));
+
+            private final UnaryOperator<String> transformation;
+
+            CaseChange(UnaryOperator<String> transformation) {
+                this.transformation = transformation;
+            }
+
+            private String apply(String s) {
+                return transformation.apply(s);
+            }
+        }
     }
 }
