@@ -1,11 +1,14 @@
 3.5.0
   - New API
     - SqlStatements.allowUnusedBindings allows you to bind Arguments to query parts that may be left out of the final query (e.g. by a TemplateEngine that renders conditional blocks) without getting an Exception.
+    - Added a JdbiConfig class to MapMapper to configure column name case changes, with a setting to entirely ignore the old preference (necessary for SqlObject usage).
   - Improvements
     - Skip unused string formatting for performance
     - Spring FactoryBean better singleton support
     - KotlinMapper respects constructor annotations, lateinit improvements
     - behavioral fixes in Argument binding where the number of provided Arguments differs from the expected number.
+  - Deprecations
+    - Deprecated the boolean property `foldCase` on MapMapper in favor of the JdbiConfig mechanism.
 
 3.4.0
   - New API
